# commerce-api-dcc-sample-fastapi-nextjs

./: README.md
backend/: .env  .env.sample  .gitignore  main.py  pyproject.toml
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: api_base_url.ts  layout.tsx  page.tsx
frontend/src/app/components/: credit-card-form.module.css  credit-card-form.tsx  message-view.tsx  sample-cards.tsx  us-states.ts
frontend/src/app/hooks/: cardIcons.ts  useSubmitOrderBatch.ts  useVGS.tsx
