[project]
name = "goody-commerce-api-direct-card-capture-sample-fastapi"
version = "0.1.0"
description = "Goody Commerce API Direct Card Capture sample app backend for FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]
